--- a/manifests/pdb.yaml
+++ b/manifests/pdb.yaml
@@ -1,13 +1,13 @@
 apiVersion: policy/v1
 kind: PodDisruptionBudget
 metadata:
-  name: contoso-air
+  name: contoso-air-2
   labels:
-    app.kubernetes.io/name: contoso-air
-    app.kubernetes.io/part-of: contoso-air-project
+    app.kubernetes.io/name: contoso-air-2
+    app.kubernetes.io/part-of: contoso-air-2-project
     kubernetes.azure.com/generator: devhub
 spec:
   maxUnavailable: 1
   selector:
     matchLabels:
-      app: contoso-air
+      app: contoso-air-2
