--- a/manifests/configmap.yaml
+++ b/manifests/configmap.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: contoso-air-2-config
+  name: conotoso-3-config
   namespace: dev
   labels:
-    app.kubernetes.io/name: contoso-air-2
+    app.kubernetes.io/name: conotoso-3
     kubernetes.azure.com/generator: devhub
 data:
