--- a/manifests/deployment.yaml
+++ b/manifests/deployment.yaml
@@ -1,27 +1,27 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: contoso-air-2
+  name: conotoso-3
   labels:
-    app.kubernetes.io/name: contoso-air-2
+    app.kubernetes.io/name: conotoso-3
     kubernetes.azure.com/generator: devhub
   namespace: dev
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app.kubernetes.io/name: contoso-air-2
+      app.kubernetes.io/name: conotoso-3
   template:
     metadata:
       labels:
-        app.kubernetes.io/name: contoso-air-2
+        app.kubernetes.io/name: conotoso-3
     spec:
       containers:
-        - name: contoso-air-2
-          image: myregistryai7d.azurecr.io/image-workflow-1762805268926:latest
+        - name: conotoso-3
+          image: myregistryai7d.azurecr.io/image-workflow-1762806796133:latest
           imagePullPolicy: Always
           ports:
-            - containerPort: 80
+            - containerPort: 3000
           resources:
             requests:
               cpu: "0.5"
@@ -31,16 +31,16 @@ spec:
               memory: "1Gi"
           envFrom:
             - configMapRef:
-                name: contoso-air-2-config
+                name: conotoso-3-config
             - secretRef:
                 name: secret-ref
                 optional: true
           livenessProbe:
             tcpSocket:
-              port: 80
+              port: 3000
           readinessProbe:
             tcpSocket:
-              port: 80
+              port: 3000
             periodSeconds: 5
             timeoutSeconds: 5
             failureThreshold: 1
@@ -48,7 +48,7 @@ spec:
             initialDelaySeconds: 3
           startupProbe:
             tcpSocket:
-              port: 80
+              port: 3000
             periodSeconds: 10
             timeoutSeconds: 1
             failureThreshold: 3
@@ -74,6 +74,7 @@ spec:
                 - NET_BIND_SERVICE
                 - SYS_CHROOT
                 - SETFCAP
+                - SYS_PTRACE
       affinity:
         podAntiAffinity:
           preferredDuringSchedulingIgnoredDuringExecution:
@@ -82,11 +83,11 @@ spec:
               topologyKey: kubernetes.io/hostname
               labelSelector:
                 matchLabels:
-                  app.kubernetes.io/name: contoso-air-2
+                  app.kubernetes.io/name: conotoso-3
       topologySpreadConstraints:
         - maxSkew: 1
           topologyKey: kubernetes.io/hostname
           whenUnsatisfiable: ScheduleAnyway
           labelSelector:
             matchLabels:
-              app.kubernetes.io/name: contoso-air-2
+              app.kubernetes.io/name: conotoso-3
