--- a/manifests/pdb.yaml
+++ b/manifests/pdb.yaml
@@ -1,13 +1,13 @@
 apiVersion: policy/v1
 kind: PodDisruptionBudget
 metadata:
-  name: contoso-air-2
+  name: conotoso-3
   labels:
-    app.kubernetes.io/name: contoso-air-2
-    app.kubernetes.io/part-of: contoso-air-2-project
+    app.kubernetes.io/name: conotoso-3
+    app.kubernetes.io/part-of: conotoso-3-project
     kubernetes.azure.com/generator: devhub
 spec:
   maxUnavailable: 1
   selector:
     matchLabels:
-      app: contoso-air-2
+      app: conotoso-3
