--- a/manifests/service.yaml
+++ b/manifests/service.yaml
@@ -1,16 +1,16 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: contoso-air-2
+  name: conotoso-3
   namespace: dev
   labels:
-    app.kubernetes.io/name: contoso-air-2
+    app.kubernetes.io/name: conotoso-3
     kubernetes.azure.com/generator: devhub
 spec:
   type: LoadBalancer
   selector:
-    app.kubernetes.io/name: contoso-air-2
+    app.kubernetes.io/name: conotoso-3
   ports:
     - protocol: TCP
-      port: 80
-      targetPort: 80
+      port: 3000
+      targetPort: 3000
